[package]
name = "mjczz-bevy"
version = "0.1.0"
edition = "2021"
default-run = "mjczz-bevy" # Set the target for the default run.

[[bin]]
name = "mjczz-bevy"
path = "src/main.rs"

[[bin]]
name = "r"
path = "src/bin/resource.rs"

[[bin]]
name = "move1"
path = "src/bin/physics_in_fixed_timestep.rs"

[[bin]]
name = "world"
path = "src/bin/world.rs"

[[bin]]
name = "events"
path = "src/bin/events.rs"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { path = "../bevy" }
rand = "0.8"

